--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
+    "noImplicitAny": true
   },
-  "include": [
-    ".eslinrc.cjs",
-    "src",  
-  ],
+  "include": [".eslinrc.cjs", "src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
