--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --color",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix --color",
     "preview": "vite preview",
     "prepare": "husky install"
   },
@@ -37,5 +37,11 @@
     "prettier": "^2.6.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,html}": [
+      "npm run lint"
+    ]
   }
+  
 }
