--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,html}\"",
+    "check-format": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,html}\""
   },
   "dependencies": {
     "eslint-config-airbnb-typescript": "^17.1.0",
