--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,html}\"",
-    "check-format": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,html}\""
+    "check-format": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,html}\"",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -42,6 +42,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,html}": [
+      "npm run check-format",
       "npm run lint"
     ]
   }
