--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -35,9 +36,12 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.0",
+    "jest": "^29.6.2",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
-    "typescript": "^5.0.2",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6",
     "vite": "^4.4.5"
   },
   "lint-staged": {
@@ -46,5 +50,4 @@
       "npm run lint"
     ]
   }
-  
 }
