--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,html}": [
       "npm run format",
-      "lint:fix",
+      "npm run lint:fix",
       "npm run lint",
       "npm run test"
     ]
