--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "eslint-config-airbnb-typescript": "^17.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
@@ -49,8 +50,7 @@
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,html}": [
       "npm run format",
       "npm run lint:fix",
-      "npm run lint",
-      "npm run test"
+      "npm run lint"
     ]
   }
 }
