--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -39,6 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.0",
     "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.1",
@@ -50,7 +53,8 @@
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,html}": [
       "npm run format",
       "npm run lint:fix",
-      "npm run lint"
+      "npm run lint",
+      "npm run test"
     ]
   }
 }
