--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test-husky": "jest --passWithNoTests"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
