--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "test-husky": "jest --passWithNoTests"
   },
   "dependencies": {
-    "classnames": "^2.3.2",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "framer-motion": "^10.15.1",
     "react": "^18.2.0",
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -46,10 +47,12 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
+    "raw-loader": "^4.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
