--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true
   },
-  "include": [".eslinrc.cjs", "src"],
+  "include": [".eslinrc.cjs", "src", "setupTests.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
