--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "swiper": "^10.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
