--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test-husky": "jest --passWithNoTests"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint-config-airbnb-typescript": "^17.1.0",
