--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,14 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
     "esModuleInterop": true,
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -14,7 +17,6 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -22,6 +24,14 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true
   },
-  "include": [".eslinrc.cjs", "src", "setupTests.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    ".eslinrc.cjs",
+    "src",
+    "setupTests.ts"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
