--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "@tanstack/react-table": "^8.9.3",
+    "@types/faker": "^5.5.9",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint-config-airbnb-typescript": "^17.1.0",
+    "faker": "^5.5.3",
     "framer-motion": "^10.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,7 +38,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
